--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   align-items: center;
 }
 
+.otp-wrapper {
+  border: 1px solid white;
+  padding: 40px;
+  border-radius: 6px;
+}
+
 .heading {
   margin-bottom: 26px;
   font-size: 28px;
@@ -54,10 +60,10 @@ button:hover {
 .otpInput {
   width: 40px;
   height: 40px;
-  margin: 5px;
-  text-align: center;
   font-size: 1.2em;
   border: 1px solid white;
   border-radius: 6px;
   margin-top: 26px;
+  margin-right: 20px;
+  text-align: center;
 }
