Update App.css - new styles added

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ button:hover {
   width: 40px;
   height: 40px;
   font-size: 1.2em;
-  border: 1px solid white;
+  border: 1px solid gray;
   border-radius: 6px;
   margin-top: 26px;
   margin-right: 20px;
